<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>fr.urssaf.image.sae</groupId>
	<artifactId>sae</artifactId>
	<version>18.8.0.1-SNAPSHOT</version>

	<packaging>pom</packaging>

	<name>sae</name>

    <!-- Utilisation du fichier POM parent ALTAIR -->
	<parent>
		<groupId>fr.pnr.altair</groupId>
		<artifactId>parent</artifactId>
		<version>1.1.3</version>
	</parent>

	<properties>
      <!-- Version des plug-ins Maven -->
		<maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
		<maven-source-plugin.version>2.1.2</maven-source-plugin.version>
		<maven-resources-plugin.version>2.5</maven-resources-plugin.version>
		<sonar-maven-plugin.version>1.0-beta-2</sonar-maven-plugin.version>
		<aspectj-maven-plugin.version>1.11</aspectj-maven-plugin.version>
		<maven-shade-plugin.version>1.4</maven-shade-plugin.version>
		<maven-assembly-plugin.version>2.2.2</maven-assembly-plugin.version>
		<maven-replacer-plugin.version>1.3.6</maven-replacer-plugin.version>
		<wagon-webdav.version>1.0-beta-2</wagon-webdav.version>
		<maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
		<axis2-maven-plugin.version>1.7.7</axis2-maven-plugin.version>
      <!--
      =========================================================
      Version des dépendances des librairies réutilisables Image
      =========================================================
      -->


      <!--
      ==========================================
      commons-cassandra
      ==========================================
      -->
		<commons.cassandra>1.0.1-SNAPSHOT</commons.cassandra>

      <!--
      ==========================================
      commons-cassandra-spring-batch
      ==========================================
      -->
		<commons.cassandra.spring.batch>1.0.1-SNAPSHOT</commons.cassandra.spring.batch>

      <!--
      ==========================================
      commons-dfce
      ==========================================
      -->
		<commons.dfce>1.9.4-SNAPSHOT</commons.dfce>

      <!--
      ==========================================
      commons-pdfbox
      ==========================================
      -->
		<commons-pdfbox>1.0.1-SNAPSHOT</commons-pdfbox>

      <!--
      ==========================================
      commons-droid
      ==========================================
      -->
		<commons-droid>1.0.1-SNAPSHOT</commons-droid>

      <!--
      ==========================================
      commons-itext
      ==========================================
      -->
		<commons-itext>1.0.1-SNAPSHOT</commons-itext>

      <!--
      =========================================================
      Version des framework/dépendances
      =========================================================
      -->


      <!--
      ==========================================
      JUnit
      http://junit.org/
      ==========================================
      -->
		<junit.version>4.8.2</junit.version>

      <!--
      ==========================================
      SLF4J (Simple Logging Facade for Java)
      http://www.slf4j.org/
      ==========================================
      -->
		<org.slf4j.version>1.6.1</org.slf4j.version>


      <!--
      ==========================================
      Ponts entre SLF4J et d'autres frameworks de log
      http://www.slf4j.org/legacy.html
      ==========================================
      -->

      <!-- JCL (Jakarta Commons Logging) vers SLF4J -->
		<jcl-over-slf4j.version>1.6.1</jcl-over-slf4j.version>

      <!-- Log4J vers SLF4J -->
		<log4j-over-slf4j.version>1.6.1</log4j-over-slf4j.version>

      <!--
      ==========================================
      Logback
      
      http://logback.qos.ch/
      ==========================================
      -->
		<logback.version>0.9.30</logback.version>


      <!--
      ==========================================
      Spring
      
      http://www.springsource.org/
      ==========================================
      -->
		<spring.framework.version>3.0.5.RELEASE</spring.framework.version>
		<spring.security.version>3.0.5.RELEASE</spring.security.version>
		<spring.batch.version>2.1.8.RELEASE</spring.batch.version>

      <!--
      ==========================================
      Apache Commons
      
      http://commons.apache.org/
      ==========================================
      -->

		<apache.commons-configuration.version>1.6</apache.commons-configuration.version>
		<apache.commons-collections.version>3.2.1</apache.commons-collections.version>
		<apache.commons-io.version>2.0.1</apache.commons-io.version>
		<apache.commons-lang.version>2.6</apache.commons-lang.version>
		<apache.commons-codec.version>1.4</apache.commons-codec.version>
		<apache.commons-compress.version>1.4.1</apache.commons-compress.version>
		<apache.commons-beanutils.version>1.8.3</apache.commons-beanutils.version>

      <!--
      ==========================================
      JDOM      
      http://www.jdom.org/
      ==========================================
      -->
		<org.jdom.version>1.1</org.jdom.version>


      <!--
      ==========================================
      Joda Time (Java date and time API)
      http://joda-time.sourceforge.net/
      ==========================================
      -->
		<joda-time.version>2.0</joda-time.version>

      <!--
      ==========================================
      Java Servlet API

      Spécifications de la version 2.3 (JSR 53) :
      http://www.jcp.org/en/jsr/detail?id=53
      
      Spécifications des versions 2.4 et 2.5 (JSR 154) :
      http://www.jcp.org/en/jsr/detail?id=154
      
      Spécifications de la version 3.0 (JSR 315) :
      http://www.jcp.org/en/jsr/detail?id=315
      ==========================================
      -->
		<javax.servlet.version>2.5</javax.servlet.version>


      <!--
      ==========================================
      AspectJ
      
      http://www.eclipse.org/aspectj/
      ==========================================
      -->
		<aspectj.version>1.8.13</aspectj.version>

      <!--
      ==========================================
      Axis 2
      
      http://ws.apache.org/axis/
      ==========================================
      -->
		<axis2.version>1.7.7</axis2.version>

      <!--
      ==========================================
      XStream
      
      http://xstream.codehaus.org/
      ==========================================
      -->
		<xstream.version>1.3.1</xstream.version>

      <!--
      ==========================================
      EasyMock
      
      http://www.easymock.org/
      ==========================================
      -->
		<easymock.version>3.0</easymock.version>

      <!--
      ==========================================
      JUnitPerf
      
      http://www.clarkware.com/software/JUnitPerf.html
      ==========================================
      -->
		<junitperf.version>1.9.1</junitperf.version>

      <!--
      ==========================================
      Google Guava
      
      http://code.google.com/p/guava-libraries/
      ==========================================
      -->
		<guava.version>13.0.1</guava.version>
     
      
      <!--
      ==========================================
      Javassist
      
      http://www.javassist.org/
      
      On embarque Javassist par transitivité,
      on fixe la version pour résoudre les conflits
      de version.
      ==========================================
      -->
		<javassist.version>3.18.1-GA</javassist.version>
      
      <!--
      ==========================================
      Bouncy Castle Cryptography APIs
      
      http://www.bouncycastle.org/java.html
      
      On embarque Bouncy Castle par transitivité,
      on fixe la version pour résoudre les conflits
      de version.
      ==========================================
      -->
		<bcprov-jdk16.version>140</bcprov-jdk16.version>
	</properties>


   <!-- Les modules -->
	<modules>

		<module>sae-bo</module>
		<module>sae-igc</module>
		<module>sae-saml</module>
		<module>sae-format</module>
		<module>sae-storage</module>
		<module>sae-droit</module>
		<module>sae-vi</module>
		<module>sae-storage-dfce</module>
		<module>sae-ecde</module>
		<module>sae-metadata</module>
		<module>sae-mapping</module>
		<module>sae-pile-travaux</module>
		<module>sae-services</module>
		<module>sae-services-batch</module>

		<module>sae-trace</module>
		<module>sae-trace-executable</module>
		<module>sae-commons</module>
		<module>sae-rnd</module>
		<module>sae-rnd-executable</module>

		<module>sae-igcmaj</module>
		<module>sae-services-executable</module>
		<module>sae-webservices</module>
		<module>sae-dfce-admin-exploit</module>
		<module>sae-ordonnanceur</module>
		<module>sae-lotinstallmaj</module>
		<module>sae-jobs-executable</module>
		<module>sae-documents-executable</module>

		<module>sae-livrable</module>

		<module>sae-integrationinstall</module>

	</modules>
   

   <!-- Configuration SVN pour le plug-in maven-release -->
	<scm>
		<url>
        scm:svn:http://svn.altair.recouv/svn/gns/java/trunk/sae/
      </url>
		<developerConnection>
         scm:svn:http://svn.altair.recouv/svn/gns/java/trunk/sae/
      </developerConnection>
		<connection>
         scm:svn:http://svn.altair.recouv/svn/gns/java/trunk/sae/
      </connection>
	</scm>


	<build>
		<plugins>

         <!-- On spécifie la version du JDK et l'encodage de caractères des sources -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>


         <!-- Dans le cas d'un packaging JAR, on demande que le JAR des sources soit également généré -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>bind-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>


         <!-- On spécifie l'encodage de caractères des ressources -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven-resources-plugin.version}</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>


         <!-- On demande la génération de la Javadoc -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
				</configuration>
			</plugin>


         <!-- On spécifie la version du plugin Maven pour Sonar -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>${sonar-maven-plugin.version}</version>
			</plugin>


         <!-- Pour la gestion des release -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<preparationGoals>clean javadoc:jar install</preparationGoals>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<useReleaseProfile>false</useReleaseProfile>
				</configuration>
			</plugin>

         <!-- Configuration mémoire pour les TU -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-Xmx1024m -XX:MaxPermSize=1024m -XX:+UseSerialGC -XX:-UseConcMarkSweepGC</argLine>
				</configuration>
			</plugin>

         <!-- Déploiement réalisé uniquement à la fin du build de tous les modules, et pas module par module. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>${maven-deploy-plugin.version}</version>
			</plugin>

		</plugins>


		<pluginManagement>

			<plugins>
         
            <!-- Configuration du lifecycle maven -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.axis2</groupId>
										<artifactId>axis2-mar-maven-plugin</artifactId>
										<versionRange>[1.7.7,)</versionRange>
										<goals>
											<goal>package</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.axis2</groupId>
										<artifactId>axis2-repo-maven-plugin</artifactId>
										<versionRange>[1.7.7,)</versionRange>
										<goals>
											<goal>create-repository</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute>
											<runOnIncremental>false</runOnIncremental>
										</execute>
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.codehaus.mojo</groupId>
										<artifactId>aspectj-maven-plugin</artifactId>
										<versionRange>[1.11,)</versionRange>
										<goals>
											<goal>test-compile</goal>
											<goal>compile</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>

            <!-- Compilation Aspect avec AspectJ -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>aspectj-maven-plugin</artifactId>
					<version>${aspectj-maven-plugin.version}</version>
					<configuration>
						<encoding>${project.build.sourceEncoding}</encoding>
						<source>1.8</source>
						<target>1.8</target>
						<complianceLevel>1.8</complianceLevel>
						<Xlint>ignore</Xlint>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>test-compile</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
            
           <!-- GESTION EXTENSION MAR AXIS2 -->
				<plugin>
					<groupId>org.apache.axis2</groupId>
					<artifactId>axis2-mar-maven-plugin</artifactId>
					<version>${axis2-maven-plugin.version}</version>
					<extensions>true</extensions>
				</plugin>

				<plugin>
					<groupId>org.apache.axis2</groupId>
					<artifactId>axis2-repo-maven-plugin</artifactId>
					<version>${axis2-maven-plugin.version}</version>
				</plugin>

			</plugins>

		</pluginManagement>

		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-webdav</artifactId>
				<version>${wagon-webdav.version}</version>
			</extension>
		</extensions>

	</build>

	<dependencies>

      <!-- JUnit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version><!--$NO-MVN-MAN-VER$--><!-- VERSION PLUS RECENTE DE JUNIT (Utilisation des annotations et autres) -->
			<scope>test</scope>
		</dependency>

      <!-- SLF4J et Logback -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${org.slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>${logback.version}</version>
		</dependency>

	</dependencies>
</project>